Image Editor doesn't display stereoscopic images #92608

Closed
opened 2021-10-29 13:42:31 +02:00 by Takuya Sawatari · 8 comments
First-time contributor

System Information
Operating system: Linux-5.8.0-63-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03

Blender Version
Broken: version: 2.93.5, branch: master, commit date: 2021-10-05 12:04, hash: a791bdabd0
Worked: 2.93.4

Caused by 5aa3167e48

Short description of error
After rendering a stereoscopic image, the image editor doesn't show both views, but only one eye.
The resolved bug #60775 sounds like the same problem: https://developer.blender.org/T60775

Exact steps for others to reproduce the error

  1. Load factory defaults
  2. Switch to camera view
  3. Enable stereoscopy in the scene settings.
  4. Check that the selected stereo 3D mode (anaglyphic, interlaced, etc.) looks correct in the viewport.
  5. Render an image.
  6. Note that only one view is shown in the image editor, regardless of the "Show Stereo" toggle.
**System Information** Operating system: Linux-5.8.0-63-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03 **Blender Version** Broken: version: 2.93.5, branch: master, commit date: 2021-10-05 12:04, hash: `a791bdabd0` Worked: 2.93.4 Caused by 5aa3167e48 **Short description of error** After rendering a stereoscopic image, the image editor doesn't show both views, but only one eye. The resolved bug #60775 sounds like the same problem: https://developer.blender.org/T60775 **Exact steps for others to reproduce the error** 1. Load factory defaults 2. Switch to camera view 3. Enable stereoscopy in the scene settings. 4. Check that the selected stereo 3D mode (anaglyphic, interlaced, etc.) looks correct in the viewport. 5. Render an image. 6. Note that only one view is shown in the image editor, regardless of the "Show Stereo" toggle.
Author
First-time contributor

Added subscriber: @Takuya

Added subscriber: @Takuya
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check.

Can confirm, will check.
Philipp Oeser self-assigned this 2021-10-29 17:40:42 +02:00
Member

My bad, caused by 5aa3167e48

My bad, caused by 5aa3167e48
First-time contributor

This issue was referenced by 619c51592f

This issue was referenced by 619c51592fcf1efcdc960386385f8a511c2a590e
First-time contributor

This issue was referenced by a5b996df88

This issue was referenced by a5b996df88c586d77d083cbbbd2299dc84cb1584
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92608
No description provided.